# primer_repo_jose

./: MERGE7_exportado.csv  Readme.md  primera parte Caso Secuestros.ipynb  pyproject.toml  tercera seccion modelo.ipynb
