[project]
name = "primer-repo-pablo"
version = "0.1.0"
description = ""
authors = [
    {name = "pablo"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "pandas (==2.2)",
    "geopandas (>=1.1.0,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "contextily (>=1.6.2,<2.0.0)",
    "calplot (>=0.1.7.5,<0.2.0.0)",
    "joypy (>=0.2.6,<0.3.0)",
    "circlify (>=0.15.0,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
